added json updates to each function

--- a/Config.json
+++ b/Config.json
@@ -2,8 +2,8 @@
     "Defaults": [
       {
         "WebBrowser": "Chrome",
-        "MainPage": "",
-        "SubPage":"",
+        "MainURL": "https://myeagle.hccs.edu/",
+        "SubURL":"",
         "UserName":"",
         "Password":""
       }
